--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ asyncio
 dataclasses; python_version < "3.7"
 typing-extensions
 aiohttp
+python-3.11.9
+python-telegram-bot==20.7
+curl-cffi
+aiohttp
+names
